# python_toy_package

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  python_toy_package.rst
python_toy_package/: python_toy_package.py
tests/: test_python_toy_package.py
