[tool.poetry]
name = "python_toy_package"
version = "0.1.0"
description = "\"python toy package\""
authors = ["Marvin-chengmin <marvin.cmin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
